<resources>
    <string name="app_name">Soccer Score Keeper</string>
    <string name="background_image_landscape">background image landscape</string>
    <string name="background_image_portrait">background image portrait</string>
    <string name="team_a">team a</string>
    <string name="fouls">Fouls:</string>
    <string name="yellows">Yellows:</string>
    <string name="reds">Reds:</string>
    <string name="goal_button">+ Goal</string>
    <string name="foul_button">+ Foul</string>
    <string name="yellow_card_button">+ Yellow Card</string>
    <string name="red_card_button">+ Red Card</string>
    <string name="team_b">team b</string>
    <string name="reset_button">RESET</string>
    <string name="zero">0</string>
    <string name="change_team_name">Change Team Name</string>
    <string name="chage_team_name_title">Change the team name to:</string>
    <string name="change_team_name_hint">Type the new name here</string>
    <string name="ok_button">OK</string>
    <string name="cancel_button">Cancel</string>
    <string name="exit_dialog_save">Quit and save</string>
    <string name="exit_dialog_dont_save">Quit without saving</string>
    <string name="exit_dialog_text">Do you want to save The team names before exiting?</string>
    <string name="edit_text_char_limit">(up to 8 characters)</string>
</resources>
